// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MpxText should handle accessibility and interaction properties: accessible-text 1`] = `
<Text
  accessibilityLabel="Accessible text content"
  accessibilityRole="text"
  accessible={true}
  allowFontScaling={true}
  selectable={true}
  style={{}}
  testID="accessible-text"
>
  Accessible and interactive text
</Text>
`;

exports[`MpxText should handle basic rendering, nested text and selection properties 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={
    {
      "fontSize": 16,
      "lineHeight": 24,
      "textAlign": "center",
      "textDecorationLine": "underline",
    }
  }
  testID="basic-text"
>
  Complex styled text
</Text>
`;

exports[`MpxText should handle complex nested text with style inheritance: nested-styled-text 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={
    {
      "color": "#333",
      "fontSize": 16,
      "fontWeight": "bold",
      "lineHeight": 24,
    }
  }
  testID="nested-styled-text"
>
  Parent text with
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      {
        "color": "red",
        "fontSize": 16,
        "fontStyle": "italic",
        "fontWeight": "bold",
        "lineHeight": 24,
      }
    }
  >
    nested red italic text
  </Text>
  and
  <Text
    allowFontScaling={false}
    selectable={false}
    style={
      {
        "color": "#333",
        "fontSize": 18,
        "fontWeight": "bold",
        "lineHeight": 24,
        "textDecorationLine": "underline",
      }
    }
  >
    underlined larger text
  </Text>
  back to parent style
</Text>
`;

exports[`MpxText should handle parent size context: parent-size-text 1`] = `
<Text
  allowFontScaling={false}
  selectable={false}
  style={
    {
      "fontSize": 27,
      "lineHeight": 54,
      "width": 150,
    }
  }
  testID="parent-size-text"
>
  Parent size context text
</Text>
`;

exports[`MpxText should merge external text pass-through context: context-text 1`] = `
<Text
  allowFontScaling={false}
  numberOfLines={1}
  selectable={false}
  style={
    {
      "color": "#ff0000",
      "fontSize": 16,
      "fontWeight": "bold",
      "textAlign": "center",
    }
  }
  testID="context-text"
>
  Context styled text
</Text>
`;
